# aichat

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.complicated  Dockerfile.withvenv  LICENSE.txt  README.rst  docker-entrypoint.sh  environment.yml  manage.py  nginx-sites-available-default.conf  pytest.ini  requirements-base.txt  requirements-test.txt  requirements.txt  requirements_base.txt  setup.cfg  setup.py  supervisor-app.conf  tox.ini  uwsgi.ini
.pytest_cache/v/cache/: lastfailed
aichat/: letsencrypt.nginx.conf  settings.py  urls.py  wsgi.py
aichatsite/: celery.py  urls.py
aichatsite/apps/chatapp/: apps.py  load.py
aichatsite/apps/chatapp/data/: commands.csv
aichatsite/settings/: base.py
ansible/: .gitignore  all.yaml  ansible.sh  baseservers.yml  deploy.yaml  inventory  packages.yaml
ansible/env_vars/: base.yml  development.yml
ansible/host_vars/: aichat  rmlcluster_master
conda/: environment.yml
deploy/: Dockerfile.old  README.md  aichat-django-nginx.conf.envsubst  django_nginx.conf  docker-entrypoint.sh  docker_entrypoint.sh  manual-server-config.sh  nginx-sites-available-default.conf  nginx-sites-available-default.conf.envsubst  notes.md  supervisor-app.conf.envsubst
deploy/ssh/: config.envsubst
devops/: .coveragerc  LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py
devops/docs/: Makefile  conf.py  index.rst
devops/src/devops/: compose.py  skeleton.py
devops/tests/: conftest.py  test_skeleton.py
docs/: Makefile  chloe_language.md  conf.py  index.rst
requirements/: base.txt  local.txt
scripts/: buildAppDebug.sh  buildAppRelease.sh  deleteBranch.sh  environment.yml  install_miniconda.sh  post_install_script.sh  provision_environment.sh  startAppAsDev.sh  tagRelease.sh
src/aichat/: audio.py  audio.py.wip  brain.py  chat.py  compose.py  console.py  constants.py  manage.py  pattern.py  skeleton.py
src/aichat/ansible/: bootstrap.yaml  config_files.yaml  deploy.retry  deploy.yaml  system.yaml
src/aichat/ansible/config/: nginx.conf  users.json
src/aichat/ansible/host_vars/: aichat
src/aichat/chatapp/: Export.csv  admin.py  apps.py  dialog_graph.py  load.py  load_df.py  models.py  urls.py  views.py
src/aichat/chatapp/data/: battery.csv  bluetooth.csv  commands.csv  jokes.csv  releaseNotes.csv  reminders.csv  signal.csv  tips.csv  wifi.csv
src/aichat/chatapp/fixtures/: initial.json  initial_chloe_0.0.5.json
src/aichat/chatapp/migrations/: 0001_initial.py  0002_node.py  0003_edge.py  0004_auto_20180525_2131.py  0005_auto_20180525_2252.py
src/aichat/chatapp/static/chatapp/: dialog.json  dialog1.json  dialogtest.json  force.css  graphutil.js  newdialog.json  style.css
src/aichat/chatapp/templates/chatapp/: create.html  force-directed-graph.html  index.html
src/aichat/chatsite/: settings.py  urls.py  wsgi.py
src/aichat/data/: bot.json  dialog.json  dialog_graph.html  graphutil.js  newdialog.json
src/aichat/devops/: compose.py
src/aichat/nlp/: __init__.py  class_synonyms.json  core.py  dispatch.py  plurals.py  synonym.py  transform.py  video_manager.py
src/aichat/nlp/command/: __init__.py  color.py  count.py  describe.py
src/aichat/scripts/: audio.py  audio.py.wip  bot.py  circlevoice.py  curate.sh  hey.py
src/aichat/website/chatapp/data/: chloe.csv  horizonFirstBoot.csv  riddles.csv  tutorial.csv
src/aichat/website/website/: settings.py
src/aira/chat/: brain.py  context.py  pattern.py
src/aira/data/: bot.csv
tests/: conftest.py  flake8_diff.sh  run_tests.sh  test_aichat.py  test_aichat_docstring_examples.py  test_chat.py  test_skeleton.py  travis_install.sh
website/: settings.py  urls.py  wsgi.py
website/chatapp/data/: callAgent.csv  chloeSkills.csv  quotes.csv  releaseNotes.csv
website/website/: settings.py  urls.py
