# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = aichat
description = Add a short description here!
author = Aira
author-email = github@totalgood.com
license = mit
url = http://...
long-description = file: README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Communications :: Chat
    Natural Language :: English

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Add here dependencies of your project (semicolon-separated), e.g.
install_requires = django
# Add here test requirements (semicolon-separated)
tests_require = pytest; pytest-cov; sphinx; pyscaffold;

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install aichat[voice]` like:
django = django;
audio = scipy; numpy; pyaudio;
voice = aichat[audio]; pocketsphinx; deepspeech; SpeechRecognition; pyttsx3;
generate = aichat[fuzzy]; exrex;
fuzzy = regex;
all = aichat[generate]; aichat[voice]; aichat[django];

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov aichat --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox

[aliases]
docs = build_sphinx
release = sdist bdist_wheel upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.0.2
package = aichat
extensions =
    django
    travis
    pre_commit
    tox
