# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = aichat
description = A AI virtual assistant chatbot
author = Aira
author-email = github@totalgood.com
license = mit
url = http://aichat.aira.io
long-description = file: README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Communications :: Chat
    Natural Language :: English

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Add here dependencies of your project (semicolon-separated), e.g.
install_requires = django; spacy; nltk; scipy; numpy; exrex; regex; pugnlp;
# Add here test requirements (semicolon-separated)
tests_require = pytest; pytest-cov; pytest-django; sphinx; pyscaffold;

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
django = django;
audio = scipy; numpy; pyaudio;
voice = aichat[audio]; deepspeech; SpeechRecognition; pyttsx3;
generate = exrex;
all = aichat[generate]; aichat[voice]; aichat[django];

[test]
# py.test options when running `python setup.py test`
addopts =
    -c pytest.ini

[aliases]
docs = build_sphinx
release = sdist bdist_wheel upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.0.2
package = aichat
extensions =
    django
    travis
    pre_commit
